Add `fail_timeout` for backends in upstream.

--- a/ansible/roles/nginx/templates/app.conf.j2
+++ b/ansible/roles/nginx/templates/app.conf.j2
@@ -1,7 +1,7 @@
 upstream php {
     # todo add dns and use hostname instead of ip.
-    server 10.0.6.21:9876;
-    server 10.0.6.22:9876;
+    server 10.0.6.21:9876 fail_timeout=1s;
+    server 10.0.6.22:9876 fail_timeout=1s;
 }
 
 server {
